Fixes code mirror line numbers overflowing visually.

--- a/tool-ui/src/main/webapp/style/v3/rte2.less
+++ b/tool-ui/src/main/webapp/style/v3/rte2.less
@@ -305,12 +305,15 @@ li.CodeMirror-hint-active {
 
 // For enhancements, let the enhancement toolbar overflow the codemirror widget,
 // and reset the z-index because it was causing problems with the submenu hover
-.CodeMirror, .CodeMirror-scroll {
-  overflow:visible !important;
-}
-.CodeMirror-linewidget {
-  overflow:visible;
-  z-index:inherit;
+.rte2-codemirror {
+  .CodeMirror,
+  .CodeMirror-scroll {
+    overflow: visible !important;
+  }
+  .CodeMirror-linewidget {
+    overflow: visible;
+    z-index: inherit;
+  }
 }
 
 .rte2-wrapper {
